// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing CourseLink Component renders as expected in bottomMost with required props and onItemPress 1`] = `
<AnimatedComponent
  style={
    Object {
      "opacity": 0,
    }
  }
>
  <Styled(ListItem)
    onPress={[Function]}
    style={
      Array [
        Object {
          "paddingRight": 10,
          "paddingVertical": 10,
        },
        false,
      ]
    }
  >
    <Styled(Left)
      style={
        Object {
          "flex": 0,
          "paddingRight": 5,
        }
      }
    >
      <Styled(Text)
        numberOfLines={1}
        style={
          Object {
            "fontSize": 15,
          }
        }
      >
        CourseLink
      </Styled(Text)>
    </Styled(Left)>
    <Styled(Content)>
      <Styled(Text)
        numberOfLines={1}
        style={
          Array [
            Object {
              "color": "#4E4A47",
              "fontSize": 15,
            },
          ]
        }
      >
        None
      </Styled(Text)>
    </Styled(Content)>
    <Styled(Right)
      style={
        Object {
          "flex": 0.05,
        }
      }
    >
      <Styled(Icon)
        name="arrow-forward"
        style={
          Array [
            Object {
              "fontSize": 15,
            },
            Object {
              "color": "#4E4A47",
            },
          ]
        }
      />
    </Styled(Right)>
  </Styled(ListItem)>
</AnimatedComponent>
`;

exports[`Testing CourseLink Component renders as expected with required props 1`] = `
<Styled(ViewNB)
  style={
    Object {
      "borderColor": "lightgray",
      "borderLeftWidth": 1,
      "marginLeft": 15,
      "paddingLeft": 10,
    }
  }
>
  <AnimatedComponent
    style={
      Object {
        "opacity": 0,
      }
    }
  >
    <Styled(ListItem)
      onPress={[Function]}
      style={
        Array [
          Object {
            "paddingRight": 10,
            "paddingVertical": 10,
          },
          Object {
            "borderBottomWidth": 0,
            "marginLeft": 0,
            "paddingLeft": 10,
          },
        ]
      }
    >
      <Styled(Left)
        style={
          Object {
            "flex": 0,
            "paddingRight": 5,
          }
        }
      >
        <Styled(Text)
          numberOfLines={1}
          style={
            Object {
              "fontSize": 15,
            }
          }
        >
          CourseLink
        </Styled(Text)>
      </Styled(Left)>
      <Styled(Content)>
        <Styled(Text)
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#4E4A47",
                "fontSize": 15,
              },
            ]
          }
        >
          None
        </Styled(Text)>
      </Styled(Content)>
      <Styled(Right)
        style={
          Object {
            "flex": 0.05,
          }
        }
      >
        <Styled(Icon)
          name="arrow-forward"
          style={
            Array [
              Object {
                "fontSize": 15,
              },
              Object {
                "color": "#4E4A47",
              },
            ]
          }
        />
      </Styled(Right)>
    </Styled(ListItem)>
  </AnimatedComponent>
</Styled(ViewNB)>
`;

exports[`Testing CourseLink Component renders as expected with required props and onItemPress 1`] = `
<Styled(ViewNB)
  style={
    Object {
      "borderColor": "lightgray",
      "borderLeftWidth": 1,
      "marginLeft": 15,
      "paddingLeft": 10,
    }
  }
>
  <AnimatedComponent
    style={
      Object {
        "opacity": 0,
      }
    }
  >
    <Styled(ListItem)
      onPress={[Function]}
      style={
        Array [
          Object {
            "paddingRight": 10,
            "paddingVertical": 10,
          },
          Object {
            "borderBottomWidth": 0,
            "marginLeft": 0,
            "paddingLeft": 10,
          },
        ]
      }
    >
      <Styled(Left)
        style={
          Object {
            "flex": 0,
            "paddingRight": 5,
          }
        }
      >
        <Styled(Text)
          numberOfLines={1}
          style={
            Object {
              "fontSize": 15,
            }
          }
        >
          CourseLink
        </Styled(Text)>
      </Styled(Left)>
      <Styled(Content)>
        <Styled(Text)
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#4E4A47",
                "fontSize": 15,
              },
            ]
          }
        >
          None
        </Styled(Text)>
      </Styled(Content)>
      <Styled(Right)
        style={
          Object {
            "flex": 0.05,
          }
        }
      >
        <Styled(Icon)
          name="arrow-forward"
          style={
            Array [
              Object {
                "fontSize": 15,
              },
              Object {
                "color": "#4E4A47",
              },
            ]
          }
        />
      </Styled(Right)>
    </Styled(ListItem)>
  </AnimatedComponent>
</Styled(ViewNB)>
`;
